--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Cabbages"
-author: "Put your name here!"
-date: "put the date here"
+author: "Michelle Benavides"
+date: "July 6, 2022"
 output:
   html_document:
     df_print: paged
