--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -55,6 +55,11 @@ With the numerical results describing the Vitamin C between c39 and c52 cultivat
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(VitC~Cult,data=veggy)
+```
+
+
 
 # Discussion and Conclusion
 
