--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -64,3 +64,5 @@ According to the Inferential Results, the average or "mean" of units between the
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+Given the results of the boxplot, summary information, and the t-test, one can conclude that there is a difference between the Vitamin C content of cabbages using the c39 and the c59 cultivation methods.  
